all weather data now loads correctly

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </form>
 
     <div class="display">
-        <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="weather icon">
+        <img src="" alt="">
         <h1 class="name"></h1>
         <p class="desc"></p>
         <p class="temp"></p>
@@ -23,7 +23,8 @@
         <p class="uv"></p>
     </div>
     <div class="locations">
-
+    </div>
+    <div id="daily" class="daily">
     </div>
     <script src="assets/js/script.js" defer></script>
 </body>
